- 
    Bug 
- 
    Resolution: Done
- 
    P3: Somewhat important 
- 
    4.7.1
- 
    None
- 
    mingw 4.4.0, windows XP SP3
- 
        4e9eb911ffc70959d81de01fe9fe4a704cafe3eb
The QLocalSocket isValid method returns always false on windows, even if state is ConnectedState and no error occured.
The result comes from the PeekNamedPipeFunction, not the check for INVALID_HANDLE_VALUE.
Though the PeekNamedPipe seems to return false, the GetLastError is 0