fix QLocalSocket::isValid() on Windows

This function always returned false, even if the socket was connected.

Task-number: QTBUG-18204
Reviewed-by: Martin Petersson